changed getFirst() to get(0) since some java versions don't have getFirst()